--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,13 @@
 * {
     box-sizing: border-box;
+    font-size: 200%;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    flex-wrap: wrap;
 }
