--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,22 @@ main {
     margin: 0 auto;
     flex-wrap: wrap;
 }
+
+#result {
+    flex: 1 100%;
+}
+
+#round-message,
+#score {
+    text-align: center;
+}
+
+#round-message {
+    font-size: 1.5em;
+    text-transform: capitalize;
+}
+
+#score {
+    font-size: 3em;
+    margin-bottom: 10px;
+}
