--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ main {
 }
 
 .available-options {
-    justify-content: space-between;
+    justify-content: space-around;
     border: 1px solid #ffffff;
 }
 
@@ -67,11 +67,21 @@ main {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 75px;
-    height: 75px;
+    width: 90px;
+    height: 90px;
     padding: 10px;
     border-radius: 50%;
     border: 1px solid #ffffff;
     box-shadow: 0 0 5px #ffffff;
     cursor: pointer;
+    overflow: hidden;
+    background-color: #ffffff;
+}
+
+.option.active {
+    border-color: blue;
+}
+
+.option:hover>img {
+    transform: scale(1.1);
 }
