--- a/assets/style.css
+++ b/assets/style.css
@@ -33,8 +33,8 @@ main {
 }
 
 .players {
-    display: inline-flex;
-    flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap-reverse;
     flex: 1;
     padding: 10px 25px;
 }
@@ -42,7 +42,7 @@ main {
 .selected-option,
 .name,
 .available-options {
-    display: inline-flex;
+    display: grid;
     flex: 1 100%;
     padding: 15px 0;
 }
@@ -53,12 +53,13 @@ main {
 }
 
 .name {
-    font-size: 1.8em;
+    font-size: 2.8em;
     color: #ffffff;
     font-weight: 600;
 }
 
 .available-options {
+
     justify-content: space-around;
     border: 1px solid #ffffff;
 }
@@ -69,7 +70,7 @@ main {
     align-items: center;
     width: 90px;
     height: 90px;
-    padding: 10px;
+    padding: 50px;
     border-radius: 50%;
     border: 1px solid #ffffff;
     box-shadow: 0 0 5px #ffffff;
@@ -93,7 +94,7 @@ main {
 
 #player2 .option {
     cursor: not-allowed;
-    background-color: #80cbc4;
+    background-color: #ffffff;
 }
 
 .reset {
@@ -102,3 +103,13 @@ main {
     justify-content: center;
     margin-top: 20px;
 }
+
+.reset>span {
+    font-size: 1.8em;
+    cursor: pointer;
+    border: 1px solid red;
+    padding: 10px 15px;
+    background-color: #f44336;
+    box-shadow: 0 0 3px;
+    color: #fff;
+    transition: all 0.2s ease;
