--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ main {
     display: flex;
     flex-wrap: wrap-reverse;
     flex: 1;
-    padding: 10px 25px;
+    padding: 1px;
 }
 
 .selected-option,
